# sys-arch

./: .gitignore  w1d2-intro2compiler.pptx  w1d2.pptx  w2d1-deeper-on-c.pptx  w2d1.pptx  w2d2-binaries.pptx  w2d2.pptx  w3d2-intro2asyn.pptx  w3d2.pptx  w4d1-deeper.pptx  w5d1-ooo.pptx  w6d1-cache-write.pptx  w6d2-mt.pptx
w1d1/: main  mm.c
w1d2/: foo.c  hello.c
w1d2/visitor/: invasive.cc  visitor.cc
w1d2/xform/: example.rs  wrong.cc
w2d1/: union.c
w2d1/arrays/: array1.c  array2.c  array3.c  array3.ll  array4.c  array4.ll  sa.c
w2d1/make/: main  main.c
w2d1/makefile-example/: Makefile  hello.c  main
w2d1/mini/: .gitignore  Makefile  main_plain  main_shared  main_static
w2d1/mini/driver/: main.cc
w2d1/mini/include/mini/: header.h
w2d1/mini/lib/: foo.cc  goo.cc
w2d1/rust-trait/: Cargo.toml
w2d1/rust-trait/src/: main.rs
w2d1/template/: Makefile  decl.cc  decl.h  main.cc
w2d1/undefined/: main.c
w2d2/: main.c
w2d2/mini/: CMakeLists.txt  Makefile
w2d2/mini/driver/: main.cc
w2d2/mini/include/mini/: header.h
w2d2/mini/lib/: foo.cc
w3d2/: main.cc  myrange.py  overload.cc  overload.py
w3d2/web-page/: index.html
w4d1/: partial.py
w4d1/decorator/: init.py  package.py  wrapper.py
w5d1/: transpose  transpose.c
w8d1/: return1.c  returnx.c
